--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
-[package]
-name = "annotation-example"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["labelswitch-data"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[workspace.dependencies]
 anyhow = "1.0.86"
 thiserror = "1.0.61"
