--- a/labelswap-gtk/Cargo.toml
+++ b/labelswap-gtk/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
-gtk = { version = "0.7", package = "gtk4" }
+gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
 
 [dependencies.adw]
 package = "libadwaita"
