--- a/labelswap-data/Cargo.toml
+++ b/labelswap-data/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
+csv = "1.3.0"
 image = "0.24.8"
 serde_json = "1.0.120"
 thiserror.workspace = true
