--- a/labelswap-data/Cargo.toml
+++ b/labelswap-data/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 anyhow.workspace = true
 csv = "1.3.0"
 image = "0.24.8"
+serde = {version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 thiserror.workspace = true
