--- a/labelswap-data/Cargo.toml
+++ b/labelswap-data/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
+chrono = "0.4.38"
 csv = "1.3.0"
 image = "0.24.8"
 serde = {version = "1.0.204", features = ["derive"] }
